# Mira

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  claude_desktop_config.json  gradle.properties  mira-android  mira-build  mira-ios  mira-local-web  pyproject.toml  settings.gradle
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: ANDROID-MVP.md  GETTING-STARTED.md  GETTING-STARTED.zh-CN.md  IOS-APP.md  IOS-APP.zh-CN.md  IOS-ISH-POC.md  MCP.md  MCP.zh-CN.md  NATIVE-ARCHITECTURE.md  NATIVE-ARCHITECTURE.zh-CN.md  README.md  README.zh-CN.md  REMOTE-RELAY.md  REMOTE-RELAY.zh-CN.md  REPO-ARCHITECTURE.md  REPO-ARCHITECTURE.zh-CN.md  TERMUX-FORK.md  THIRD-PARTY-NOTICES.md  THIRD-PARTY-NOTICES.zh-CN.md  TODO.md  TOOLBOX.md  TOOLBOX.zh-CN.md  article-draft.md  article-draft.zh-CN.md
mira/: __init__.py  cli.py  release.py
native/: CMakeLists.txt
native/bridge/android/jni/: mira_pty_jni.c
native/bridge/ios/: mira_ios_frida_loader.m  mira_ios_frida_service.c  mira_ios_log_hook.c  mira_ios_relay.c  mira_pty_ios_shim.c  mira_pty_ios_shim.h
native/bridge/jni/: mira_pty_jni.c
native/include/mira/: frida_cli_embed.h  pty.h  shell.h
native/platform/android/: pty_android.c
native/src/: pty_core.c
native/src/frida/: frida_cli.c
native/src/platform/android/: pty_pair_android.c
native/src/platform/darwin/: pty_pair_darwin.c
native/src/posix/: pty_posix_platform.h  pty_spawn_posix.c
native/src/pty/: pty_core.c  pty_platform.h
native/src/shell/: builtin_shell.c  builtin_shell.h  ish_hostfs.m  ish_shell.m  shell_core.c
(+110 files in other folders)
